<resources>
    <string name="app_name">Github App</string>
    <string name="search">Search</string>
    <string name="more_detail"><![CDATA[More Detail >]]></string>
    <string name="hint">Enter Username</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="respository">Respository</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="follower">Followers</string>
    <string name="search_user">Masukan Nama Pengguna</string>
    <string name="followers_text">Mengikuti Anda</string>
    <string name="pengguna_tidak_ditemuka">Pengguna Tidak Ditemukan</string>
    <string name="company_string">Company : %s </string>
    <string name="location_string">Location : %s</string>
    <string name="setting">Pengaturan</string>
    <string name="favorite">Favorite User</string>
</resources>