<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:visibility="visible"
    tools:context=".UI.DetailActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_margin="15dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/darkGrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible"
        />
    <ToggleButton
        android:id="@+id/toggleFav"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="20dp"
        android:background="@drawable/ic_favorit"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/imgUser"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src = "@tools:sample/avatars"/>

        <TextView
            android:id="@+id/tv_name"
            style="@style/primaryText"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            tools:text="Nama"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgUser" />


        <TableLayout
            android:id="@+id/table_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toEndOf="@id/imgUser"
            app:layout_constraintTop_toTopOf="@id/imgUser"
            app:layout_constraintBottom_toBottomOf="@id/imgUser">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:gravity="center">

                <TextView
                    style="@style/secondaryVarText"
                    android:id="@+id/num_follower"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    tools:text="69"
                    />
                <TextView
                    style="@style/secondaryVarText"
                    android:id="@+id/num_following"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    tools:text="69" />
                <TextView
                    style="@style/secondaryVarText"
                    android:id="@+id/num_repo"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    tools:text="69" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:gravity="center">
                <TextView
                    style="@style/primaryText"
                    android:id="@+id/tv_follower"
                    android:gravity="center"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/followers"
                    />
                <TextView
                    style="@style/primaryText"
                    android:id="@+id/tv_following"
                    android:gravity="center"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/following"
                    />
                <TextView
                    style="@style/primaryText"
                    android:id="@+id/tv_repo"
                    android:gravity="center"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/respository"
                    />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/company"
            style="@style/secondaryVarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:text="@string/company"
            tools:text="Company : Institut Teknologi Sepuluh Nopember"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_location"
            style="@style/secondaryVarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/company"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:text="@string/location"
            tools:text="Location : Surabaya"
            android:textSize="15sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_follow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:tabIndicatorColor="@color/darkGrey"
        app:tabIndicatorHeight="2dp"
        app:tabTextColor="@color/darkGrey"
        />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tab_follow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>